src/test/resources/fixtures/parser/solidity_official_tests/shouldSucceed/expExpression.sol
contract test {
  function fun(uint256 a) {
    uint256 x = 3 ** a;
  }
}