src/test/resources/fixtures/parser/solidity_official_tests/shouldFail/payable_accessor.sol
contract test {
  uint payable x;
}